k8s/gitops/argo-events/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server-ingress
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: argo-events.jameshounshell.com
      http:
        paths:
          - backend:
              service:
                name: github-eventsource-svc
                port:
                  name: main
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - jameshounshell.com
